--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -194,47 +194,13 @@
                 card_view:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <LinearLayout
+
+                <fragment
+                    android:id="@+id/reviewsPrevFragment"
+                    android:name="it.polito.mad_lab3.restaurant.reviews_prev.ReviewsPrevFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-                        <ImageView
-                            android:layout_width="32dp"
-                            android:layout_height="32dp"
-                            android:background="@drawable/ic_comment_star_black_48dp"/>
-                        <TextView
-                            android:padding="8dp"
-                            android:textSize="18sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="41 reviews"/>
-                    </LinearLayout>
-                    <RatingBar
-                        android:layout_marginTop="8dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:theme="@style/RatingBar"
-                        style="?android:attr/ratingBarStyle"
-                        android:rating="3.5"/>
-                    <!-- max 3 reviews inserted programmatically in this point -->
-                    <include layout="@layout/review_view" />
-                    <include layout="@layout/review_view" />
-                    <include layout="@layout/review_view" />
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:id="@+id/showAllReviewsButton"
-                        android:text="SHOW ALL" />
-                </LinearLayout>
-
+                    />
             </android.support.v7.widget.CardView>
         </LinearLayout>
         <!-- End Reviews -->
