--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -195,16 +195,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <fragment
+               <!-- <fragment
                     android:id="@+id/reviewsPrevFragment"
                     android:name="it.polito.mad_lab3.restaurant.reviews_prev.ReviewsPrevFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    />
+                    />-->
             </android.support.v7.widget.CardView>
         </LinearLayout>
         <!-- End Reviews -->
-
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/reservation"
+            android:src="@drawable/ic_remove_blue"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView >
 </android.support.design.widget.CoordinatorLayout>
