--- a/app/src/main/res/layout/choice_fragment.xml
+++ b/app/src/main/res/layout/choice_fragment.xml
@@ -1,157 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-    <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardElevation="4dp"
-        card_view:cardCornerRadius="3dp">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardElevation="4dp"
+    card_view:cardCornerRadius="3dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="@string/are_you_staying"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/holo_blue_light"
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:nextFocusDown="@id/seats">
-
-        <ImageButton
-            android:id="@+id/eat_in"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/circular_background"
-            android:src="@drawable/rest_table" />
-
-        <ImageButton
-            android:id="@+id/takeaway"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/circular_background"
-            android:src="@drawable/lunch" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/seats"
-        android:focusableInTouchMode="true"
-        android:focusable="true"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginBottom="5dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:src="@drawable/ic_people_outline_black_48dp"
-                android:tint="@android:color/holo_blue_dark"
-                android:layout_marginRight="5dp"
-                android:layout_gravity="center_vertical"
-                android:alpha="0.5" />
-
+            android:id="@+id/choice_layout"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/text2"
-                android:layout_width="wrap_content"
+                android:id="@+id/text"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:text="@string/howmany"
+                android:text="@string/are_you_staying"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@android:color/holo_blue_light"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:nextFocusDown="@id/seats">
+
+                <ImageButton
+                    android:id="@+id/eat_in"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/circular_background"
+                    android:src="@drawable/rest_table" />
+
+                <ImageButton
+                    android:id="@+id/takeaway"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/circular_background"
+                    android:src="@drawable/lunch" />
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/seats"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
 
-            >
-            <ImageButton
-                android:id="@+id/minus"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_remove_blue"
-                 />
-
-            <TextView
-                android:id="@+id/counter"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="1"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_gravity="center" />
+                android:layout_marginBottom="5dp">
 
-            <ImageButton
-                android:id="@+id/plus"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_add_blue"
-                />
+                <ImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:src="@drawable/ic_people_outline_black_48dp"
+                    android:tint="@android:color/holo_blue_dark"
+                    android:layout_marginRight="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:alpha="0.5" />
+
+                <TextView
+                    android:id="@+id/text2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/howmany"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_margin="10dp"
+                android:orientation="horizontal"
+
+                >
+                <ImageButton
+                    android:id="@+id/minus"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_remove_blue"
+                    />
+
+                <TextView
+                    android:id="@+id/counter"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="1"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_gravity="center" />
+
+                <ImageButton
+                    android:id="@+id/plus"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_add_blue"
+                    />
 
 
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/order_food"
+                android:padding="10dp"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:background="@drawable/roundend_background"
+                android:text="Order now"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkout"
+                android:padding="10dp"
+
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/roundend_background"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:text="Check Out"/>
         </LinearLayout>
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/order_food"
-            android:padding="10dp"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:background="@drawable/roundend_background"
-            android:text="Order now"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkout"
-            android:padding="10dp"
-
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:background="@drawable/roundend_background"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:text="Check Out"/>
-    </LinearLayout>
-
-</LinearLayout>
 
 </android.support.v7.widget.CardView>
