--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -195,12 +195,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-               <!-- <fragment
+                <fragment
                     android:id="@+id/reviewsPrevFragment"
                     android:name="it.polito.mad_lab3.restaurant.reviews_prev.ReviewsPrevFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    />-->
+                    />
             </android.support.v7.widget.CardView>
         </LinearLayout>
         <!-- End Reviews -->
