--- a/app/src/main/res/layout/food_order_header.xml
+++ b/app/src/main/res/layout/food_order_header.xml
@@ -1,28 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="10dp">
+
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:paddingBottom="10dp">
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/info"
+    android:layout_marginLeft="5dp"
+    android:orientation="horizontal"
+    >
     <TextView
         android:id="@+id/dish"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
-        android:layout_gravity="left"
         android:textStyle="bold"
-        android:layout_marginLeft="5dp"
         android:text="Dish"
         android:textAppearance="?android:attr/textAppearanceMedium"
-         />
+        />
+
+</LinearLayout>
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:id="@+id/quantity_layout"
+    android:layout_marginRight="5dp"
+    android:orientation="horizontal">
+
     <TextView
         android:id="@+id/quantity"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:gravity="right"
+        android:layout_width="wrap_content"
         android:textStyle="bold"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="5dp"
         android:text="Quantity"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
 
-
 </LinearLayout>
+</RelativeLayout>
