--- a/app/src/main/res/layout/list_order_fragment.xml
+++ b/app/src/main/res/layout/list_order_fragment.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="@dimen/activity_horizontal_margin">
 
     <ListView
