--- a/app/src/main/res/layout/offer_prev_fragment_layout.xml
+++ b/app/src/main/res/layout/offer_prev_fragment_layout.xml
@@ -19,6 +19,7 @@
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/offerPrevTitle"
             android:text="Offers"/>
     </LinearLayout>
 
