--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="it.polito.mad_lab3.MainActivity">
+        tools:context="it.polito.mad_lab3.MainActivity"
+        android:background="@drawable/wood_background"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,10 +26,12 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="175dp"
                 android:id="@+id/cover"
-                android:scaleType="centerCrop"
-                android:src="@drawable/main_background"/>
+                android:src="@drawable/title"
+                android:layout_marginTop="20dp"
+
+                />
 
             <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
 
@@ -49,7 +53,6 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
@@ -99,11 +102,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/titolo_offerte_vicine"
-            android:textSize="18sp"
             android:layout_gravity="center_horizontal"
-            android:textColor="@color/titoli"
             android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"/>
+            android:layout_marginBottom="10sp"
+            style="@style/niceText" />
 
         <!--
             qui ci possiamo mettere una lista con card medio/grandi
@@ -113,17 +115,19 @@
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="150dp"
             android:id="@+id/recyclerView_nearOffers"/>
 
         <Button
-            android:layout_marginTop="50sp"
+            android:layout_marginTop="10dp"
             android:id="@+id/addReview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add Review" />
 
     </LinearLayout>
+
+    <!---->
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -131,6 +135,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header" />
+
 
 
 </android.support.v4.widget.DrawerLayout>
