--- a/app/src/main/res/layout/fragment_ricerca_avanzata.xml
+++ b/app/src/main/res/layout/fragment_ricerca_avanzata.xml
@@ -15,100 +15,81 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="2sp"
-            android:textColor="@color/titoli"
-            android:fontFamily="sans-serif"
-            android:text="@string/ricercaAvanzata"
-            android:layout_gravity="center"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/costo_lay">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textColor="@color/titoli"
-                    android:fontFamily="sans-serif"
-                    android:text="@string/tipoLocaleFinder"
-                    android:layout_gravity="center_vertical"/>
-
+            <TableRow>
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:textColor="@color/titoli"
+                        android:fontFamily="sans-serif"
+                        android:text="@string/tipoLocaleFinder"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="10dp" />
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:textColor="@color/titoli"
+                        android:fontFamily="sans-serif"
+                        android:text="@string/costoFinder"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="10dp"/>
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:textColor="@color/titoli"
+                        android:fontFamily="sans-serif"
+                        android:text="@string/valutazioneFinder"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="10dp"/>
+            </TableRow>
+            <TableRow>
                 <Spinner
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/spinner_tipo_finder"
-                    android:layout_marginLeft="1sp"
                     android:entries="@array/tipoLocaleArray"
-                    android:popupBackground="@color/lightGrey">
+                    android:popupBackground="@color/lightGrey"
+                    android:layout_weight="1"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp">
                 </Spinner>
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-               <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:layout_marginLeft="5sp"
-                    android:textColor="@color/titoli"
-                    android:fontFamily="sans-serif"
-                    android:text="@string/costoFinder"
-                    android:layout_gravity="center_vertical"/>
 
                 <Spinner
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/spinner_costo_finder"
-                    android:layout_marginLeft="1sp"
                     android:entries="@array/costoArray"
-                    android:popupBackground="@color/lightGrey">
+                    android:popupBackground="@color/lightGrey"
+                    android:layout_weight="1"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp">
+                </Spinner>
+
+                <Spinner
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spinner_valutazione_finder"
+                    android:entries="@array/valutazioneArray"
+                    android:popupBackground="@color/lightGrey"
+                    android:layout_weight="1"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp">
 
                 </Spinner>
 
-            </LinearLayout>
+            </TableRow>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/titoli"
-                android:fontFamily="sans-serif"
-                android:text="@string/valutazioneFinder"
-                android:layout_gravity="center_vertical"/>
-
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/spinner_valutazione_finder"
-                android:layout_marginLeft="1sp"
-                android:entries="@array/valutazioneArray"
-                android:popupBackground="@color/lightGrey">
-
-            </Spinner>
-
-        </LinearLayout>
+        </TableLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -121,10 +102,13 @@
                 android:layout_height="30sp"
                 android:id="@+id/reset_finder"
                 android:text="@string/reset"
+                android:textColor="@color/white"
                 android:layout_gravity="end"
-                android:background="#00FA9A"
+                android:background="@drawable/mybutton"
                 android:textSize="14sp"
-                android:layout_marginRight="2sp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="5dp"
+                style="?android:attr/borderlessButtonStyle"
                 />
 
             <Button
@@ -132,9 +116,13 @@
                 android:layout_height="30sp"
                 android:id="@+id/search_finder"
                 android:text="@string/search"
+                android:textColor="@color/white"
                 android:layout_gravity="end"
-                android:background="#00FA9A"
+                android:background="@drawable/mybutton"
                 android:textSize="14sp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="5dp"
+                style="?android:attr/borderlessButtonStyle"
                 />
         </LinearLayout>
 
