--- a/app/src/main/res/layout/toolbar_view.xml
+++ b/app/src/main/res/layout/toolbar_view.xml
@@ -25,6 +25,10 @@
             android:textColor="@android:color/white"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_gravity="left"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="1"
             />
 
 </android.support.v7.widget.Toolbar>
