--- a/app/src/main/res/menu/filter_button_toolbar.xml
+++ b/app/src/main/res/menu/filter_button_toolbar.xml
@@ -4,5 +4,6 @@
     <item android:id="@+id/menu_find"
         android:title="@string/search"
         app:showAsAction="always"
-        android:icon="@drawable/ic_filter_white" />
+        android:icon="@drawable/ic_filter_white"
+        />
 </menu>
