--- a/app/src/main/res/drawable/rectangle_editext.xml
+++ b/app/src/main/res/drawable/rectangle_editext.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="10dp">
-
-    <solid android:color="#FFFFFF"/>
-    <stroke android:width="1dp" android:color="@color/black" />
+    android:shape="rectangle" >
+    <solid android:color="@color/colorAccent"/>
+    <corners android:radius="-50dp" android:topRightRadius="5dp" android:bottomRightRadius="-5dp"></corners>
 
 </shape>
